css/style-guide.css
/* ... */
.btn-branding{
  padding: 16px 37px 16px 40px;
  border-radius: 100px;
  background: #464d5c;
  border: 1px solid #3e4853;
  box-shadow: inset 0 1px 0 hsla(0,0%,100%,.05),0 1px 2px rgba(0,0,0,.05);
  text-shadow: 0 1px 0 #3e4853;
}

.btn-branding:hover{
  background-color: #656c7c;
  border: 1px solid #464d5c;
  color: hsla(0,0%,100%,.9);
}
.btn-branding:active {
  background-color: #3e4853;
  box-shadow: inset 0 1px 2px rgba(0,0,0,.15);
}

.btn-delete{
  padding: 8px 14px 7px 17px;
  background-color: #f2555b;
  border: 1px solid #de464c;
  box-shadow: inset 0 1px 0 hsla(0,0%,100%,.05),0 1px 2px rgba(0,0,0,.05);
  text-shadow: 0 1px 0 #de464c;
}
.btn-delete:hover {
  background-color: #ff6b71;
  border: 1px solid #f2555b;
  color: hsla(0,0%,100%,.9);
}
.btn-delete:active {
  background-color: #de464c;
  box-shadow: inset 0 1px 2px rgba(0,0,0,.15);
}

.btn-cancel {
  padding: 8px 14px 7px 17px;
  color: #464d5c;
  border: 1px solid rgba(185,193,199,.5);
  background-color: transparent;
  box-shadow: inset 0 1px 0 hsla(0,0%,100%,.05),0 1px 2px rgba(0,0,0,.05);
}
.btn-cancel:hover {
  background-color: #f6f6f6;
  color: rgba(70,77,92,.9);
}
.btn-cancel:active {
  background-color: #edeff2;
  box-shadow: inset 0 1px 2px rgba(0,0,0,.15);
}

.btn-login {
  color: #3a7bf7;
  background-color: transparent;
  border: 1px solid #3a7bf7;
  padding: 11px 25px 11px 27px;
  border-radius: 100px;
  font-size: 14px;
}

.btn-login:hover {
  color: #fff;
  background-color: #3a7bf7;
  border: 1px solid #3a7bf7;
}

.btn-login:active {
  background-color: #2e62c5;
  box-shadow: inset 0 1px 2px rgba(0,0,0,.15);
}

.btn-article-preview {
  padding: 8px 20px 7px 23px;
  border: 1px solid #7b8994;
  color: #7b8994;
  letter-spacing: 4px;
  background-color: transparent;
}

.btn-article-preview:hover {
  border: 1px solid #3774e8;
  color: #fff;
  background-color: #3a7bf7;
}

.btn-article-preview:active {
  background-color: #2e62c5;
  box-shadow: inset 0 1px 2px rgba(0,0,0,.15);
}

.btn-template-preview {
  padding: 8px 20px 7px 23px;
  background-color: rgba(255,255,255,0);
  border: 1px solid hsla(0,0%,100%,.4);
  color: hsla(0,0%,100%,.8);
}

.btn-template-preview:hover {
  border: 1px solid hsla(0,0%,100%,.82);
  color: #fff;
  background-color: rgba(255,255,255,0.5);
}

.btn-template-preview:active {
  background-color: hsla(0,0%,100%,.1);
  box-shadow: inset 0 1px 2px rgba(0,0,0,.15);
}


@media only screen and (min-width: 768px) {
  .btn {
    font-size: 14px;
  }
}

@media only screen and (max-width: 1024px) {
  #buttons .cd-box .btn-box:nth-of-type(8),#buttons .cd-box .btn-box:nth-of-type(9) {
    display: none;
  }
}



.cd-buttons .cd-box:nth-of-type(2) span {
  /* CSS class name color */
  color: #3a7bf7;
}

/* --------------------------------

xIcons

-------------------------------- */
.cd-icons li {
  /* icons size */
  width: 32px;
  height: 32px;
}

/* --------------------------------

xForm

-------------------------------- */
#form .cd-box {
  height: auto;
}

input[type=text], select {
  border-radius: 0;
  padding-top: 10px;
  padding-bottom: 5px;
  letter-spacing: 1px;
  background: transparent;
  border: none;
  border-bottom: 1pt solid #d0d3d9;
  width: 240px;
  line-height: 20px;
  color: #6d7075;
  -webkit-transition: border-color .3s ease-in-out;
  transition: border-color .3s ease-in-out;
}
input[type=text]:focus, select:focus {
  outline: none;
}

.input-success input[type=text] {
  border-color: #45CE5E;
}
.input-alert input[type=text] {
  border-color: #f2555b;
}

input[type=text]:focus {
  border-color:#3a7bf7;
}

input[type=radio],
input[type=checkbox] {
  position: absolute;
  left: 0;
  top: 0;
  margin: 0;
  padding: 0;
  opacity: 0;
}

form fieldset:nth-of-type(2){
  margin-top: 25px;
}

.input-alert {
  /*display: inline-block;*/
  cursor: inherit !important;
  position: relative;
  margin-left: -16px;
  display: block;
  margin-top: -5px;
}

.input-alert:before {
  font-size: 16px;
  right: -240px;
  position: relative;
  color: #F2555B;
  -webkit-transition: border-color .3s ease-in-out;
  transition: border-color .3s ease-in-out;
}
.input-alert:after {
  content: '验证码错误';
  font-size: 12px;
  left: 16px;
  top: 59px;
  position: absolute;
  color: #F2555B;
  font-family:'Montserrat-Regular',-apple-system,Helvetica Neue,Arial,PingFang SC,Hiragino Sans GB,Microsoft YaHei,WenQuanYi Micro Hei,sans-serif;
  -webkit-transition: border-color .3s ease-in-out;
  transition: border-color .3s ease-in-out;
}

.input-success {
  /*display: inline-block;*/
  cursor: inherit !important;
  position: relative;
  margin-left: -16px;
  display: block;
  margin-top: 11px;
}

.input-success::before{
  font-size: 16px;
  right: -240px;
  position: relative;
  color: #45CE5E;
  -webkit-transition: border-color .3s ease-in-out;
  transition: border-color .3s ease-in-out;
}

.input-success:after {
  content: '验证码正确';
  font-size: 12px;
  left: 16px;
  top: 59px;
  position: absolute;
  color: #45CE5E;
  font-family: 'Montserrat-Regular',-apple-system,Helvetica Neue,Arial,PingFang SC,Hiragino Sans GB,Microsoft YaHei,WenQuanYi Micro Hei,sans-serif;
  -webkit-transition: border-color .3s ease-in-out;
  transition: border-color .3s ease-in-out;
}


.checkbox-label {
  color: #464d5c;
  padding-left: 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.checkbox-label::before,
.checkbox-label::after {
  /* custom radio and check boxes */
  content: '';
  display: block;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  transform: translateY(-50%);
}
.checkbox-label::before {
  left: 0;
  border: 1px solid #d0d3d9;
  box-shadow: inset 1px 1px rgba(0, 0, 0, 0.03);
}
/* ... */

